--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "basic-dropdown-shintot",
-  "version": "0.1.8",
-  "main": "dist/Dropdown.js",
+  "name": "basic-tableuser-shintot",
+  "version": "0.1.3",
+  "main": "dist/Modal.js",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
